Fix text wrap

--- a/src/index.css
+++ b/src/index.css
@@ -98,3 +98,7 @@ input[type='checkbox'] {
   margin: auto;
   top: 0; bottom: 0; left: 0; right: 0;
 }
+
+#news-items {
+  white-space: nowrap;
+}
